force-app/main/default/objects/Opportunity/fields/Select_Test1__c.field-meta.xml
<CustomField>
    <fullName>Select_Test1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing selective commits</description>
    <label>Select Test1</label>
    <type>Checkbox</type>
</CustomField>