force-app/main/default/objects/Opportunity/fields/Selective_Commit_Enablement__c.field-meta.xml
<CustomField>
    <fullName>Selective_Commit_Enablement__c</fullName>
    <description>Tets field for selective commit enablement</description>
    <label>Selective Commit Enablement</label>
    <type>DateTime</type>
</CustomField>