force-app/main/default/objects/Opportunity/fields/Selective_Commit_Test_Two__c.field-meta.xml
<CustomField>
    <fullName>Selective_Commit_Test_Two__c</fullName>
    <description>Testing selective commits w pre-fetch volume</description>
    <label>Selective Commit Test Two</label>
    <type>TextArea</type>
</CustomField>